White space fix

--- a/assets/pre-css/main.css
+++ b/assets/pre-css/main.css
@@ -147,9 +147,8 @@ body {
   width: 100%;
   position: relative; }
   .header #header-title {
-    padding: 15px;
-    letter-spacing: 1rem;
-    white-space: nowrap;
+    padding: 15px 0px;
+    margin: 0px;
     font-size: 32px;
     font-weight: 700;
     color: white; }
