--- a/assets/sass/partials/_modules.scss
+++ b/assets/sass/partials/_modules.scss
@@ -10,9 +10,8 @@
 	position: relative;
 
 	#header-title {
-		padding: 15px;
-		letter-spacing: 1rem;
-		white-space: nowrap;
+		padding: 15px 0px;
+		margin: 0px;
 		font-size: 32px;
 		font-weight: 700;
 		color: white;
